# maple

./: .gitignore  Cargo.toml  a.txt  b.txt  build.rs  c.txt  remedy_debug.rdbg  rustfmt.toml
docs/: frame timing.md  renderer notes.md
libs/pal/: Cargo.toml  build.rs
libs/pal/src/: vulkan.rs  win32.rs
libs/utils/src/: array_vec.rs  lib.rs
modules/pal/src/: lib.rs  vulkan.rs
modules/renderer/: Cargo.toml  build.rs  notes.md
modules/renderer/src/: color.rs  constants.rs  context.rs  effect.rs  error.rs  geometry.rs  lib.rs  renderer.rs  swapchain.rs  triangle_renderer.rs  vertex.rs  vertex_renderer.rs  window_context.rs
modules/sys/: Cargo.toml
modules/sys/src/: dpi.rs  lib.rs  library.rs  window.rs  window_event.rs  window_handle.rs
modules/triangle_renderer/: Cargo.toml  build.rs
modules/triangle_renderer/src/: constants.rs  effect.rs  error.rs  lib.rs  renderer.rs  swapchain.rs
modules/utils/: Cargo.toml
modules/utils/src/: array_vec.rs  lib.rs
modules/vulkan/: Cargo.toml
modules/vulkan/src/: context.rs  error.rs  lib.rs  swapchain.rs
modules/vulkan_utils/: Cargo.toml
modules/win32/: Cargo.toml  build.rs
modules/win32/src/: lib.rs
modules/windowing/: Cargo.toml
resources/: app-manifest.rc
sandbox/: Cargo.toml  build.rs  sandbox-manifest.rc
sandbox/src/: main.rs
scripts/: doc.bat  lint.bat
shaders/: simple_vertex.vert
src/: array_vec.rs  color.rs  constants.rs  data_store.rs  dpi.rs  geometry.rs  handle.rs  library.rs  main.rs  os_window2.rs  px.rs  recorder.rs  render_base.rs  render_context.rs  renderer.rs  shapes.rs  swapchain.rs  traits.rs  ui.rs  ui_thread.rs  vulkan.rs  win32_ui_thread.rs  window.rs  window_event.rs  window_handle.rs
src/gfx/: canvas.rs  color.rs  context.rs  executor.rs  geometry.rs  mod.rs  recorder.rs  shared.rs  vulkan.rs
src/item_storage/: mod.rs  object.rs  slot.rs  types.rs
src/registry/: indexed.rs  mod.rs  named.rs  object.rs  slot.rs  types.rs
src/renderer/: context.rs  error.rs  executor.rs  mod.rs  shared.rs  swapchain.rs  vulkan.rs
src/sys/: dpi.rs  input.rs  library.rs  mod.rs  window.rs
src/ui/: builder.rs  commands.rs  context.rs  draw.rs  elements.rs  event.rs  layout.rs  mod.rs  os_window.rs  tree.rs  widget.rs  widgets.rs  window.rs
(+12 files in other folders)
