[package]
name = "maple"
version = "0.1.0"
edition = "2018"

[dependencies]
sys = { path = "modules/sys" }
win32 = { path = "modules/win32" }
renderer = { path = "modules/renderer" }
utils = { path = "modules/utils" }
ash = { version = "0.33", default-features = false }
vulkan_utils = { path = "modules/vulkan_utils" }

[dependencies.clap]
version = "2.33.3"
default-features = false

[dependencies.tokio]
version = "1.12.0"
features = ["rt-multi-thread", "sync", "parking_lot", "time", "macros"]

[target.'cfg(windows)'.build-dependencies]
embed-resource = "1.6.3"

[workspace]
members = [
    "modules/renderer",
    "modules/sys",
    "modules/utils",
    "modules/vulkan_utils",
    "modules/win32",
]
