[package]
name = "maple"
version = "0.1.0"
edition = "2021"

[dependencies]
win32 = { path = "modules/win32" }
ash = { version = "0.33", default-features = false }
lazy_static = "1.4.0"

[dependencies.clap]
version = "2.33.3"
default-features = false

[target.'cfg(windows)'.build-dependencies]
embed-resource = "1.6.3"

[build-dependencies]
shaderc = "0.7"

[workspace]
members = [
    "modules/win32",
]
