[package]
name = "maple"
version = "0.1.0"
edition = "2021"

[dependencies]
ash = { version = "0.33", default-features = false }
lazy_static = "1.4.0"
rand = "0.8.4"
thiserror = "1.0.30"
ahash = "0.7.6"

[target.'cfg(windows)'.dependencies.windows]
version = "0.25.0"
features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
]

[target.'cfg(windows)'.build-dependencies]
embed-resource = "1.6.3"

[build-dependencies]
shaderc = "0.7"

# [profile.release]
# debug = true
