[package]
name = "win32"
version = "0.1.0"
edition = "2021"

[target.'cfg(windows)'.dependencies.windows]
version = "0.25.0"
features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
]

[target.'cfg(windows)'.build-dependencies]
windows = "0.25.0"
